添加一个临时用的生成URL的工具